--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#fa1b49",
-        "activityBar.background": "#fa1b49",
-        "activityBar.foreground": "#e7e7e7",
-        "activityBar.inactiveForeground": "#e7e7e799",
-        "activityBarBadge.background": "#155e02",
-        "activityBarBadge.foreground": "#e7e7e7",
-        "commandCenter.border": "#e7e7e799",
-        "sash.hoverBorder": "#fa1b49",
-        "statusBar.background": "#dd0531",
-        "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#fa1b49",
-        "statusBarItem.remoteBackground": "#dd0531",
-        "statusBarItem.remoteForeground": "#e7e7e7",
-        "titleBar.activeBackground": "#dd0531",
-        "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.inactiveBackground": "#dd053199",
-        "titleBar.inactiveForeground": "#e7e7e799"
+        "activityBar.activeBackground": "#dbfe91",
+        "activityBar.background": "#dbfe91",
+        "activityBar.foreground": "#15202b",
+        "activityBar.inactiveForeground": "#15202b99",
+        "activityBarBadge.background": "#22b7fd",
+        "activityBarBadge.foreground": "#15202b",
+        "commandCenter.border": "#15202b99",
+        "sash.hoverBorder": "#dbfe91",
+        "statusBar.background": "#cbfe5e",
+        "statusBar.foreground": "#15202b",
+        "statusBarItem.hoverBackground": "#bbfe2b",
+        "statusBarItem.remoteBackground": "#cbfe5e",
+        "statusBarItem.remoteForeground": "#15202b",
+        "titleBar.activeBackground": "#cbfe5e",
+        "titleBar.activeForeground": "#15202b",
+        "titleBar.inactiveBackground": "#cbfe5e99",
+        "titleBar.inactiveForeground": "#15202b99"
     },
-    "peacock.color": "#dd0531"
+    "peacock.color": "#CBFE5E"
 }
